scripts/tests/errors/err_nil_index.bu
// Test: indexing nil should produce clean runtime error
// Expected: "Cannot index this type"

var x = nil;
var y = x[0];
